[project]
name = "Brickmaster"
dynamic = ["version"]
authors = [
  { name="Christopher Gill", email="chris@chrisgill.net" },
]
description = "Brickmaster Lego Control"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adafruit-circuitpython-logging",
    "adafruit-circuitpython-ht16k33",
    "adafruit-circuitpython-logging",
    "Adafruit-Blinka",
    "netifaces2",
    "paho-mqtt",
    "psutil",
    "pid"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Home Automation"
]

[project.urls]
Homepage = "https://github.com/chrisgilldc/brickmaster"
Issues = "https://github.com/chrisgilldc/brickmaster/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "pkg/__about__.py"